# ROZ

./: CMakeLists.txt  README.md  main.cpp  parse_files.cpp  train.cpp
classes/: Classifier.cpp  DataHandler.cpp  FeatureHandler.cpp  GaborHandler.cpp  HistogramHandler.cpp  Image.cpp  Person.cpp
